--- a/connect2016/developer/README.adoc
+++ b/connect2016/developer/README.adoc
@@ -10,25 +10,45 @@ Requirements:
 
 == 1. Start Couchbase - 9-10a
 
+In this workshop, we will be learning how to do a simple installation of Couchbase Server. We will be going from nothing
+to a single node cluster. Instructions will be provided for a local install on Windows, OS X, and many popular Linux distros.
+We will also cover the creation of a Couchbase Server instance on the popular cloud hosting platforms AWS and Azure.
+Finally, we will go over a single node installation in a Docker container (using Docker, Docker for Windows, or Docker for Mac).
+When this session is complete, you will be ready for the next workshop.
+
 * Running on Desktop
 * Running on AWS / Azure
 * Running on Docker
 
 == 2. Using Couchbase - 10:15a - 11:15a
 
-* cbq
-* REST API
-* SDK Sample (.NET / Java / Node)
+In this workshop, we will be going over some basic developer interactions with Couchbase Server. You'll learn about how
+to write and execute basic N1QL (SQL for JSON) queries in both the new Query Workbench and the cbq command line utility.
+We will also write a very simple program using the Couchbase SDK. This program will create a new document and store it in
+Couchbase, and it will also execute a N1QL query and display the results. Instructions will be provided for popular programming
+languages including: .NET, Java, and Node.js.
+
+* Query Workbench / cbq
+* SDK Sample (.NET / Java / Node / maybe PHP)
 
 == 3. Building an Application - 12p - 1:45p
 
+In this workshop, we will be building a full stack web application. We will be using Angular to create the UI, and it will
+make REST calls to a backend that interacts with Couchbase Server. Popular frameworks and languages will be covered, including
+ASP.NET WebAPI, Express.js, and Spring. We will continue discussing N1QL, and we'll also look at basic data modeling. Finally, we
+will look at some common design patterns for using the SDK in popular languages including: .NET, Node, and Java.
+
 * Use an Angular frontend
-* Use .NET / Node / Java backend
+* Use .NET / Node / Java backend (maybe PHP)
 * Discuss data modeling
 * N1QL
 * SDK design patterns: async, timeouts, error handling
 
 == 4. Sample Couchbase Cluster - 2p - 3p
 
+In this workshop, we will create a simple Couchbase Server cluster with multiple nodes. We will create a three node cluster
+through using Docker containers, and popular cloud services AWS and Azure.
+
 * Simple docker cluster
 * Simple Amazon cluster
+* Simple Azure cluster
